Adjusted to new interface setup